@@ -1,3 +1,9 @@
+2015-08-05  Nick Clifton  <nickc@redhat.com>
+
+	* doc/binutils.texi: Document that the --only-keep-debug option
+	to strip and objcopy preserves the section headers of stripped
+	sections.
+
 2015-08-04  Yuriy M. Kaminskiy"  <yumkam@gmail.com>
 	    Tyler Hicks  <tyhicks@canonical.com>
 
